tests/baselines/reference/avoid(strict=true).errors.txt
avoid.ts(17,7): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== avoid.ts (1 errors) ====
    function f() {
        var x=1;
    }
    
    var y=f();  // error void fn
    var why:any=f(); // error void fn
    var w:any;
    w=f(); // error void fn
    
    class C {
        g() {
            
        }
    }
    
    var z=new C().g(); // error void fn
    var N=new f();  // ok with void fn
          ~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    
    